[package]
name = "ip-bridge"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true  

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
rand ="0.8.5"
regex = "1.10.4"
clap = {version = "4.4.11", features = ["derive", "env"]}
log = "0.4.20"
env_logger = { version = "0.11.2" }
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.31.0"
reqwest = { version = "0.11", features = ["json"] }
openssl ={ version = "0.10.64", features = ["vendored"] }
chrono = "0.4.38"